# hotkeyd

./: Cargo.toml  README.md  hotkeyd.plist  install.sh  model.ipynb
.ipynb_checkpoints/: model-checkpoint.ipynb
.virtual_documents/: Untitled.ipynb
docs/: observations.md
hotkeyd/: Cargo.toml
hotkeyd/src/: button_mapping.rs  config_manager.rs  key.rs  key_mapping.rs  main.rs  utils.rs
hotkeyd_derive/: Cargo.toml
hotkeyd_derive/src/: lib.rs
